add_subdirectory(eos)
register_grace_object_conditional(grace_scalar_adv GRACE_ENABLE_SCALAR_ADV scalar_advection.cpp )
register_grace_object_conditional(grace_burgers_eq GRACE_ENABLE_BURGERS burgers_equation.cpp ) 
register_grace_object_conditional(grace_grmhd GRACE_ENABLE_GRMHD grmhd.cpp )
register_grace_object_conditional(grace_bssn GRACE_ENABLE_BSSN_METRIC bssn.cpp)
register_grace_object_conditional(grace_m1 GRACE_ENABLE_M1 m1.cpp ) 
