add_subdirectory(eos)
register_grace_object(grace_grmhd grmhd.cpp )
register_grace_object(grace_grmhd_B_from_A grmhd_B_from_A.cpp )
register_grace_object(grace_b_field_injection b_field_injection.cpp )
register_grace_object_conditional(grace_m1 GRACE_ENABLE_M1 m1.cpp )
register_grace_object_conditional(grace_kadath_importer GRACE_ENABLE_FUKA import_kadath.cpp )